--- a/www/css/style.css
+++ b/www/css/style.css
@@ -33,7 +33,7 @@
     }
     
     #mycanvas {
-        color: #ffffff;
+        color: white;
         font-size: 40px;
         text-align: center;
         position:absolute; top:10px; 
@@ -66,3 +66,6 @@
     }
     
     input[type=number] {text-align: right;}
+    body{
+        background-color: skyblue;
+    }
