--- a/www/css/style.css
+++ b/www/css/style.css
@@ -69,3 +69,8 @@
     body{
         background-color: skyblue;
     }
+
+    button{
+        background-color: blue;
+        color: white;
+    }
