--- a/www/css/style.css
+++ b/www/css/style.css
@@ -32,6 +32,8 @@
         position:absolute; top:340px; 
         left:10px; right:10px;
         box-shadow: 5px 5px 5px black;
+        width: 50%;
+        margin: 0 auto;
     }
     
     #mycanvas {
