--- a/www/css/style.css
+++ b/www/css/style.css
@@ -40,35 +40,34 @@
         color: white;
         font-size: 40px;
         text-align: center;
-        position:absolute; top:10px; 
-        left:10px; right:10px;
+        position:absolute; top:10px; left: 50%;transform: translateX(-50%);
     }
     
     #btnA {
         background-color: yellow;
         color: green;
         font-size: 20px;
-        position:absolute; top:380px; left:2%; width:43%; height:60px; 
+        position:absolute; top:380px; left:2%; width:35%; height:60px; 
     }
     
     #btnB {
         font-size: 20px;
-        position:absolute; top:380px; left:45%; width:25%; height:60px; 
+        position:absolute; top:380px; left:63%; width:35%; height:60px; 
     }
 
     #btnC {
         font-size: 20px;
-        position:absolute; top:380px; left:70%; width:28%; height:60px; 
+        position:absolute; top:600px; left:35%; width:28%; height:60px; 
     }
     
     #minute {
         font-size: 30px;
-        position:absolute; top:450px; left:60px; width:80px; height:40px;   
+        position:absolute; top:670px; left:60px; width:80px; height:40px;   
     }
     
     #second {
         font-size: 30px;
-        position:absolute; top:450px; left:190px; width:80px; height:40px;   
+        position:absolute; top:670px; left:190px; width:80px; height:40px;   
     }
     
     input[type=number] {text-align: right;}
