--- a/www/css/style.css
+++ b/www/css/style.css
@@ -21,18 +21,17 @@
         font-weight: bold;
         font-size: 20px;
         text-align: center;
-        position:absolute; top:310px; 
-        left:10px; right:10px;
+        position:absolute; top:325px; left:25%; transform: translateX(-50%); width:150px; height:40px;
+        box-shadow: 5px 5px 5px black;
+        margin: 0 auto;
     }
     
     #time {
         color: #ff0000;
         font-size: 20px;
         text-align: center;
-        position:absolute; top:340px; 
-        left:10px; right:10px;
+        position:absolute; top:325px; left:75%; transform: translateX(-50%); width:150px; height:40px;
         box-shadow: 5px 5px 5px black;
-        width: 50%;
         margin: 0 auto;
     }
     
@@ -47,12 +46,12 @@
         background-color: yellow;
         color: green;
         font-size: 20px;
-        position:absolute; top:380px; left:2%; width:35%; height:60px; 
+        position:absolute; top:380px; left:25%; transform: translateX(-50%); width:150px; height:60px;
     }
     
     #btnB {
         font-size: 20px;
-        position:absolute; top:380px; left:63%; width:35%; height:60px; 
+        position:absolute; top:380px; left:75%; transform: translateX(-50%); width:150px; height:60px;
     }
 
     #btnC {
@@ -62,12 +61,12 @@
     
     #minute {
         font-size: 30px;
-        position:absolute; top:670px; left:60px; width:80px; height:40px;   
+        position:absolute; top:670px; left:25%; transform: translateX(-50%); width:150px; height:40px;   
     }
     
     #second {
         font-size: 30px;
-        position:absolute; top:670px; left:190px; width:80px; height:40px;   
+        position:absolute; top:670px; left:75%; transform: translateX(-50%); width:150px; height:40px;   
     }
     
     input[type=number] {text-align: right;}
